added token verification,login,logout,etc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 	<form action="/users/login" method="POST">
 		<div>Username :</div>
 		<div><input type="text" name="username" size="30"></div><br>
-		<div>password :</div>
+		<div>Password :</div>
 		<div><input type="password" name="password" size="30"></div><br>
 		<div><button type="submit">Login</button> &nbsp <a href="/users/signup">Signup</a></div>
 	</form>
