fixed token expired bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include ./partials/header %>
-
+<div class="title">Welcome to the Talking Dump</div>
+<div class="description">Where Donald Trump said stuff about stuff!</div>
+<div class="description">Please login to continue</div>
 	<form action="/users/login" method="POST">
 		<div>Username :</div>
 		<div><input type="text" name="username" size="30"></div><br>
