--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,41 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url(https://lareviewofbooks-org-cgwbfgl6lklqqj3f4t3.netdna-ssl.com/wp-content/uploads/2016/04/trump3.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100%;
+  background-attachment: fixed;
 }
 
 a {
   color: #00B7FF;
+}
+.title {
+  font: 64px "Lucida Grande";
+  color: White;
+  text-align: center;
+  background: black;
+  opacity: 0.7
+}
+.description{
+  font: 30px "Lucida Grande";
+  color: White;
+  text-align: center;
+  background: black;
+  opacity: 0.7
+}
+form {
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  color: white;
+  letter-spacing: 5px;
+  border-radius: 10px;
+  background-color: black;
+  border-radius: 10px;
 }
