--- a/views/tagoptions.ejs
+++ b/views/tagoptions.ejs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel='stylesheet' href='/stylesheets/tags.css' />
     <title></title>
   </head>
   <body>
+    <div class="title">Please choose a category</div>
     <form action="#" method="post">
       <select class="" name="">
         <%for (let i = 0; i<tags.length; i++){%>
