--- a/public/stylesheets/tags.css
+++ b/public/stylesheets/tags.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 50px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url(http://static6.businessinsider.com/image/55918b77ecad04a3465a0a63/nbc-fires-donald-trump-after-he-calls-mexicans-rapists-and-drug-runners.jpg);
+  background-image: url(http://az616578.vo.msecnd.net/files/2016/07/23/6360489455192162291563850737_Trump.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -12,5 +12,5 @@ body {
   font: 64px "Lucida Grande";
   color: White;
   background: black;
-  opacity: 0.7
+  opacity: 0.9
 }
