changed to british accent

--- a/views/tagoptions.ejs
+++ b/views/tagoptions.ejs
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <div class="title">Please choose a category</div>
+    <div class="title">Please choose what Donald would say about</div>
     <form action="/tags/<%=username%>" method="post">
       <select name="tags">
         <%for (let i = 0; i<tags.length; i++){%>
