--- a/public/stylesheets/tags.css
+++ b/public/stylesheets/tags.css
@@ -11,6 +11,7 @@ body {
 .title {
   font: 64px "Lucida Grande";
   color: White;
+  text-align: center;
   background: black;
-  opacity: 0.9
+  opacity: 0.8
 }
